* machine names can be longer now (pooplog)
* more exceptions trapped on loading of vsts, more accurate data sent to pluginlog.txt (pooplog)
* replace and exchange functions in gear rack maintain connections (pooplog)
* Internal effects moved to native plugins and improved them in some cases. (bohan)
* more work in the VstTimeInfo. samplePos is correctly indicated now and improved ppqPos. [JAZ]
! sampler doesn't crash when no instrument is specified any more (pooplog)
! save as - pick an existing song, and it now asks if it is ok to overwrite (pooplog)
! error messages on file read/write problems (pooplog)
! vsts don't immediately crash psycle when they give an exception on save/load/instance any more (pooplog)
! master machine does not let clipping samples through when decrease on clip is set (pooplog)
! folders with .s are now working for plugins, vsts, skins, etc. (pooplog)
! songs with invalid connections are dealt with correctly (pooplog)
! pattern lengths no longer can be randomly changed by adding new/cloning patterns (pooplog)
! can't delete the master any more (pooplog)
! various other small bugfixes (pooplog)
! some memory leaks fixed [JAZ]
! Sample loading routine is now more flexible.This allows to load files that previously didn't. [JAZ]


V1.7.2
------
! bug where the sampler didn't stop the notes sometimes.


V1.7.1
------

+ Added option (not) to loop the Song/block at the end.
+ (NEEDS TESTING!)Added "mcm" option in the MidiInput dialog, to record midi commands directly.
! Crash bug when opening the minimixer when it had connected machines with a name of 15 letters.
! New default size not working with the keyboard shortcut of moving next (which adds a new pattern)
! Values not being shown when adding them at the last line of pattern, with wrap around disabled.
! Play block now does work correctly
! Fixed Saving to wav. options "save pattern" and "save sequence position" didn't ever stop.


V1.7RC6
-------
