@@ -114,7 +114,6 @@ BOOL CPsycleApp::InitInstance()
 	{
 		OnAboutpsycle();
 	}
-	MessageBox(NULL,"THIS BUILD OF PSYCLE SAVES SONGS IN AN INCOMPLETE FORMAT!\nSONGS SAVED WITH PREVIOUS ALPHAS OF THIS FILE FORMAT SHOULD BE DELETED AS THEY ARE OBSOLETE!!\nINSTRUMENT CHUNK FORMAT WILL BE CHANGING!\nSONGS SAVED IN THIS BUILD WILL NOT LOAD IN FUTURE VERSIONS OF PSYCLE!\nTHIS BUILD IS ONLY FOR TESTING!\nDO NOT SAVE CHANGES TO ANY OF YOUR SONGS WITH THIS BUILD AND DO NOT OVERWRITE YOUR SONGS!\nYOU MAY LOSE DATA PERMANENTLY IF YOU SAVE WITH THIS VERSION!!!!!\nAUTOSAVE IS ALSO DISABLED!\nTHANKS,\npooplog","WARNING!",NULL);
 	
 	//Process Command Line
 	ProcessCmdLine(pFrame);
